--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:server": "tsc --project ./tsconfig.server.json --outDir ./dist",
+    "build:server": "webpack --config webpack.config.server.js",
     "start": "node ./dist/server.js"
   },
   "keywords": [],
@@ -17,7 +17,11 @@
     "@typescript-eslint/parser": "^5.50.0",
     "eslint": "^8.33.0",
     "eslint-plugin-react": "^7.32.2",
-    "typescript": "^4.9.5"
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.5",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "express": "^4.18.2"
