--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
+    "antd": "^5.1.7",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "react": "^18.2.0",
