--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -9,6 +9,7 @@
     "skipLibCheck": true,
     "strict": true,
     "strictNullChecks": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "moduleResolution": "node"
   }
 }
